--- a/index.html
+++ b/index.html
@@ -189,6 +189,12 @@
     function App() {
       const [user, setUser] = useState(null);
       const [transactions, setTransactions] = useState([]);
+      const [showModal, setShowModal] = useState(false);
+const [amount, setAmount] = useState("");
+const [type, setType] = useState("gasto");
+const [category, setCategory] = useState("");
+const [note, setNote] = useState("");
+const [loading, setLoading] = useState(false);
 
       useEffect(() => {
         return auth.onAuthStateChanged(u => setUser(u));
@@ -196,7 +202,44 @@
 
       useEffect(() => {
         if (!user) return;
+}, [user]);
+      async function addTransaction() {
+    if (!amount || !category) return;
 
+    setLoading(true);
+
+    try {
+      await db
+        .collection("artifacts")
+        .doc(APP_ID)
+        .collection("users")
+        .doc(user.uid)
+        .collection("transactions")
+        .add({
+          amount: Number(amount),
+          type,
+          category,
+          note,
+          createdAt: Date.now()
+        });
+
+      setAmount("");
+      setCategory("");
+      setNote("");
+      setType("gasto");
+      setShowModal(false);
+    } catch (err) {
+      alert("Error al guardar la transacción");
+    }
+
+    setLoading(false);
+  }
+return (
+    <div>
+      {/* UI */}
+    </div>
+  );
+}
         return db
           .collection("artifacts")
           .doc(APP_ID)
@@ -271,7 +314,82 @@
               </div>
             ))}
           </div>
+<button
+  onClick={() => setShowModal(true)}
+  className="fixed bottom-24 right-6 bg-indigo-700 text-white w-14 h-14 rounded-full text-3xl flex items-center justify-center shadow-xl"
+>
+  +
+</button>
+          {showModal && (
+  <div className="fixed inset-0 bg-black/30 backdrop-blur-sm flex items-end justify-center z-50">
+    <div className="bg-white w-full max-w-md p-6 rounded-t-xl2">
+      <h3 className="text-xl font-bold mb-4">Nueva transacción</h3>
 
+      {/* MONTO */}
+      <input
+        type="number"
+        placeholder="Monto (S/)"
+        className="w-full p-3 mb-3 rounded-xl border"
+        value={amount}
+        onChange={e => setAmount(e.target.value)}
+      />
+
+      {/* TIPO */}
+      <div className="flex gap-2 mb-3">
+        {["ingreso", "gasto", "ahorro"].map(t => (
+          <button
+            key={t}
+            onClick={() => setType(t)}
+            className={`flex-1 py-2 rounded-xl border ${
+              type === t
+                ? t === "ingreso"
+                  ? "bg-emerald-500 text-white"
+                  : t === "gasto"
+                  ? "bg-rose-500 text-white"
+                  : "bg-violet-500 text-white"
+                : "bg-white"
+            }`}
+          >
+            {t === "ingreso" ? "💰 Ingreso" : t === "gasto" ? "💸 Gasto" : "💜 Ahorro"}
+          </button>
+        ))}
+      </div>
+
+      {/* CATEGORIA */}
+      <input
+        placeholder="Categoría (Ej: Comida)"
+        className="w-full p-3 mb-3 rounded-xl border"
+        value={category}
+        onChange={e => setCategory(e.target.value)}
+      />
+
+      {/* NOTA */}
+      <input
+        placeholder="Nota (opcional)"
+        className="w-full p-3 mb-4 rounded-xl border"
+        value={note}
+        onChange={e => setNote(e.target.value)}
+      />
+
+      {/* ACCIONES */}
+      <div className="flex gap-3">
+        <button
+          className="flex-1 py-3 rounded-xl border"
+          onClick={() => setShowModal(false)}
+        >
+          Cancelar
+        </button>
+        <button
+          className="flex-1 py-3 rounded-xl bg-indigo-700 text-white"
+          onClick={addTransaction}
+          disabled={loading}
+        >
+          {loading ? "Guardando..." : "Guardar"}
+        </button>
+      </div>
+    </div>
+  </div>
+)}
           {/* NAV BAR */}
           <div className="fixed bottom-4 left-4 right-4 bg-white/70 backdrop-blur-xl rounded-xl2 shadow-lg flex justify-around py-3">
             <button>🏠</button>
